@startuml

title __INFORMACION's Class Diagram__\n

  namespace com.example.cardihealt {
    namespace Informacion {
      class com.example.cardihealt.Informacion.Adapter_Informacion {
          ~ context : Context
          ~ myInformacion : List_Informacion[]
          + Adapter_Informacion()
          + getItemCount()
          + onBindViewHolder()
          + onCreateViewHolder()
      }
    }
  }
  

  namespace com.example.cardihealt {
    namespace Informacion {
      class com.example.cardihealt.Informacion.Adapter_Informacion.ViewHolder {
          ~ descripcionInfo : TextView
          ~ image_info : ImageView
          ~ textInfo : TextView
          + ViewHolder()
      }
    }
  }
  

  namespace com.example.cardihealt {
    namespace Informacion {
      class com.example.cardihealt.Informacion.Informacion {
          # onCreate()
      }
    }
  }
  

  namespace com.example.cardihealt {
    namespace Informacion {
      class com.example.cardihealt.Informacion.List_Informacion {
          - descripcion : String
          - informacion : String
          - movieImage : Integer
          + List_Informacion()
          + getDescripcion()
          + getInformacion()
          + getMovieImage()
          + setDescripcion()
          + setInformacion()
          + setMovieImage()
      }
    }
  }
  

  com.example.cardihealt.Informacion.Adapter_Informacion -up-|> androidx.recyclerview.widget.RecyclerView.Adapter
  com.example.cardihealt.Informacion.Adapter_Informacion +-down- com.example.cardihealt.Informacion.Adapter_Informacion.ViewHolder
  com.example.cardihealt.Informacion.Adapter_Informacion.ViewHolder -up-|> androidx.recyclerview.widget.RecyclerView.ViewHolder
  com.example.cardihealt.Informacion.Informacion -up-|> androidx.appcompat.app.AppCompatActivity


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
